--- a/intention motor representation with corrado sinigaglia/intention and motor action.ppr.corrected.tex
+++ b/intention motor representation with corrado sinigaglia/intention and motor action.ppr.corrected.tex
@@ -221,13 +221,15 @@ The need to understand how intentions relate to motor representations follows fr
 
 The problem of explaining this we called the interface problem. Theoretically uncomplicated approaches to solving it would involve appeal to common causes or to processes of translation. The interface problem is a problem because no such approach is viable given the present state of knowledge. However, we have shown that there is another way of solving the interface problem. This solution hinges on the existence of concepts which refer to actions by deferring to motor representations. Where intentions involve such deferential concepts, their contents are logically linked to those of motor representations and so the interface problem can be solved. In short, then, we have shown that there is a theoretically coherent and empirically plausible solution to the interface problem, one which requires neither common causes nor processes of translation to link intention and motor representation.
 
-A further conjecture is that whenever there is a non-accidental match between the contents of intentions and of motor representations, this is due at least in part to deferential action concepts. The plausibility of this conjecture rests in part on the absence of any other viable full solution to the interface problem, and of course we do not claim to have shown that no alternatives exists. If the conjecture is right, if there is no way of fully solving the interface problem other than by means of deferential action concepts, then concepts which refer by deferring to motor representations are what tie explicit practical reasoning to motor processes.
+A further conjecture is that whenever there is a non-accidental match between the contents of intentions and of motor representations, this is due at least in part to deferential action concepts. 
+The plausibility of this conjecture rests in part on the absence of any other viable full solution to the interface problem, and of course we do not claim to have shown that no alternatives exist. 
+If the conjecture is right, then concepts which refer by deferring to motor representations are what tie explicit practical reasoning to motor processes.
 
 More speculatively still, we suggest that where an intention properly and reliably produces bodily movement, either acting on that intention involves a further intention or else the intention involves concepts which refer to actions by deferring to motor representations. If so, it is deferential action concepts that ultimately connect intentions to bodily movements. Only by recognising how intentions interlock with motor representations can we hope to understand how our intentions ever make a difference to the world around us.
 
 On this view experience of acting plays a novel role. Experiences made possible by motor representation, such as those associated with phenomenologically action-like imagination and those associated with actual action, are arguably necessary for there to be concepts which are constituents of intentions and refer to actions by deferring to motor representations. But if, as we conjecture, such deference is necessary for intentions to properly and reliably result in bodily movements, it may turn out that intending to act in the world depends on experiences which are made possible by motor representation. Much as on some views thought about objects depends on perceptual experience \citep[e.g.][]{Campbell:2002ge}, so also intending actions may depend on motor experience.%
 \footnote{
-Heartfelt thanks to Chiara Brozzo, Silvano Zipoli Caiani, Naomi Eilan, Vittorio Gallese, Francesco Guala, \'Elisabeth Pacherie and Natalie Sebanz.  Corado Sinigaglia was supported by EU grant TESIS, a Fellowship from the Institute of Philosophy (University of London) and a Fellowship from the Center for the Epistemology of Cognitive Sciences, Ecole Normale Superiéure de Lyon.
+Heartfelt thanks to Gabriella Bottini, Chiara Brozzo, Silvano Zipoli Caiani, Naomi Eilan, Vittorio Gallese, Francesco Guala, \'Elisabeth Pacherie, Natalie Sebanz and an anonymous referee.  Corado Sinigaglia was supported by EU grant TESIS, a Fellowship from the Institute of Philosophy (University of London) and a Fellowship from the Center for the Epistemology of Cognitive Sciences, Ecole Normale Superiéure de Lyon.
 }  
 
 
