wokring on intor

--- a/developing mind/chapter_01.tex
+++ b/developing mind/chapter_01.tex
@@ -5,7 +5,7 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {A}
+\def \ititle {The Developing Mind}
 \def \isubtitle {}
 \def \iauthor {Stephen A. Butterfill}
 \def \iemail{s.butterfill@warwick.ac.uk}
@@ -31,11 +31,109 @@
 \maketitle
 %\tableofcontents
 
-\begin{abstract}
-\noindent
-***
-\end{abstract}
+%\begin{abstract}
+%\noindent
+%***
+%\end{abstract}
 
+
+\section{From Myths to Mechanisms}
+
+How do humans come to know  about---and to knowingly manipulate---%
+objects,
+causes,
+words,
+numbers,
+colours,
+actions
+and
+thoughts?
+In a beautiful myth, Plato suggests that the answer is recollection. 
+Before birth, in another world, we become acquainted with the truth. 
+Then, in falling to earth, we forget everything. 
+But as we grow we are sometimes able to recall part of what we once knew.
+So it is by recollection that humans come to know about objects, causes, numbers and everything else. 
+
+How else could this happen?
+Since Plato philosophers and psychologists have offered other stories.  
+Some hold, like Plato, that knowledge is in some sense present at birth.
+Or else that the concepts which make knowledge possible are already present at birth. 
+Others suggest that concepts and knowledge are acquired through sensory experience, through learning to act, through training in language or through social interaction.
+These are seductive ideas but none has survived rigorous scientific testing; some have failed, others have yet to be  thoroughly tested or are perhaps not  currently precise enough test. 
+And when we look at particular cases in detail---for instance, when we look at how humans come to know about colours---we will discover complexities that seem to be incompatible with any of the stories. 
+That's why this book doesn't tour nativism, empiricism and other myths about the developmental origins of human knowledge, valuable though these are. 
+Development is like climate change in one respect.
+Lots of different mechanisms are simultaneously at work and many interact with each other. 
+%While it might initially seem more satisfying to have a unifying myth, 
+To make progress we need to identify various mechanisms and attempt to model their interactions. 
+
+In broad outline, then, understanding the developmental origins of knowledge calls detailed investigation of many interacting but separate phenomena rather than large-scale theory building. 
+This attitude is nicely captured by some psychologists reflecting on difficulties in understanding knowledge of objects:
+%
+\begin{quote}
+`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ the task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
+%. ...\ the challenge ...\ is to characterize what it is about the mental representations of the presence or absence of the barriers that constrains representations of where the object should be in looking-time studies and how these representations differ from those that guide search or pointing in the present studies%
+'
+\citep[p.\ 1522]{Hood:2000bf}.
+\end{quote}
+%
+%obstacle --- half-formed minds
+Performing this task  requires philosophical as well as more narrowly psychological investigation. 
+The question is how humans come to know about objects, words, thoughts and other things. 
+In pursuing this question we have to consider minds where the knowledge is neither clearly present nor obviously absent. 
+This is challenging because both commonsense and theoretical tools for describing minds are generally designed for characterising fully developed adults. 
+Davidson writes:
+%
+\begin{quote}
+`%
+%if you want to describe what is going on in the head of the child when it has a few words which it utters in appropriate situations, you will fail for lack of the right sort of words of your own. 
+We have many vocabularies for describing nature when we regard it as mindless, and we have a mentalistic vocabulary for describing thought and intentional action; what we lack is a way of describing what is in between' \citep[p.\ 11]{Davidson:1999ju}.
+\end{quote}
+%
+%Of course you might not agree with Davidson that children just starting to use words are incapable of thought or of intentional action. 
+%In fact research on children's pre-verbal communicative behaviours such as pointing seems not only to manifest purposiveness but also a sensitivity to others' thoughts.
+%(Davidson seems to have paid little attention to development, and he held that being able to think, to act intentionally and to communicate with language all require understanding the possibility that one's own beliefs may be false.)
+%Even so, Davidson 
+%
+This is why philosophy is needed. 
+To understand the emergence of knowledge we need to find ways of describing what is in between: individuals whose movements are neither mindless nor guided by intention and knowledge.  
+%in between ways of describing individuals, ways that neither treat them as mindless nor presuppose capacities for knowledge.  
+
+
+This difficulty emerges in a concrete way in developmental research. 
+When can infants first know things about objects they aren't perceiving?   
+For instance, when a ball falling behind a chair disappears from view, when do infants first realise that the ball is somewhere behind the chair?
+The ability to realise this is known as `object permanence'.  
+One way to test for object permanence is to ask when infants first reach for objects they can’t see or when they first remove barriers to retrieve objects concealed behind them.  
+Infants don’t do this until around eight months \citep[p.\ 202]{Meltzoff:1998wp} or maybe later \citep{moore:2008_factors}.  
+Since four-month-olds already have the planning skills they would need to execute the reach \citep{Shinskey:2001fk}, 
+their failure to reach is evidence that infants can first think about objects they aren’t perceiving at around eight months or later.  
+But another way to test for object permanence is to ask how infants respond to apparently impossible events. 
+Suppose, for example, that infants watch as a solid object is placed immediately behind a screen and then the screen falls backwards, ending up flat as though the object were not there, which is apparently impossible \citep{baillargeon:1985_object,baillargeon:1987_object}. 
+If infants show heightened interest in this and similar cases, perhaps by looking at the display for longer than might otherwise be expected, this would be evidence that they can know things about objects they aren't perceiving.\footnote{
+These particular studies have been attacked on methodological grounds \citep[e.g.][]{sirois:2007_social_}, but there are other, related studies \citep[some are mentioned by][]{Aguiar:2002ob}.
+}
+As it turns out, infants show such heightened interest from around four months or earlier. 
+Put together, the two sorts of findings give rise to the `paradox of early permanence' (as \citealp{Meltzoff:1998wp} call it). 
+The best explanation of the first sort of findings seems to be that infants cannot think about objects they aren't perceiving until eight months or later; 
+but the best explanation of the second sort of findings seems to be that infants can do this from around four months or earlier. 
+Clearly these explanations cannot both be correct. 
+But neither seems to be wrong. 
+Resolving this apparent conflict requires responding to an instance of Davidson's challenge and find ways of describing phenomena in between mindless ignorance of unseen objects and adult-like knowledge of objects.  
+%key review paper: \citep{moore:2010_numerical}
+
+In what follows we will repeatedly encounter instances of this challenge  in considering the developmental origins of different domains of knowledge, 
+and we will examine tools philosophers and psychologists have invented in responding to different instances of the challenge.  
+Puzzling, often apparently contradictory patterns of findings concerning how humans come to know about things such as objects, colours, causes, numbers and the rest matter for two reasons.
+One is that they can advance our understanding of  the origins of knowledge.
+The other is that they show how little is actually understood and how much is yet to be discovered.
+In what follows there is no much by way of answers; the primary aim is just to identify the puzzles.
+
+%Focus is on development and origins of knowledge ... but a side-effect will be that we understand representation, perception and knowledge better.
+
+
+%source!
+%research/Development as Rediscovery--core knowledge and speech perception.doc
 
 \section{The puzzle}
 \label{sec:puzzle}
@@ -52,6 +150,14 @@ Preview of cases
 
 Preview of remedies
 
+
+\section{Quotes}
+
+\citep[p.\ 198]{Fodor:1975pb}: “the fundamental explicandum, is the organism and its propositional attitudes: what it believes, what it learns, what it wants and fears, what it perceives to be the case. Cognitive psychologists accept ... the facticity of ascriptions of propositional attitudes to organisms and the consequent necessity of explaining how organisms come to have the attitudes to propositions that they do.”
+
+\citep[p.\ 104]{Locke:1975qo}: “... ’tis past doubt, that Men have in their Minds several Ideas, such as are those expressed by the words, Whiteness, Hardness, Sweetness, Thinking, Motion, Man, Elephant, Army, Drunkenness, ... and others: It is in the first place to be enquired, How he comes by them?”
+
+\citep[p.\ 12]{Dewey:1938yp}: “How does it come about that the development of organic behavior into controlled inquiry brings about the differentiation and cooperation of observational and conceptual operations?”
 
 \section{Why}
 Why study philosophy of mind and developmental psychology together?
