--- a/developing mind/chapter_01.tex
+++ b/developing mind/chapter_01.tex
@@ -47,7 +47,7 @@ numbers,
 colours,
 actions
 and
-thoughts?
+minds?
 In a beautiful myth, Plato suggests that the answer is recollection. 
 Before birth, in another world, we become acquainted with the truth. 
 Then, in falling to earth, we forget everything. 
@@ -132,8 +132,18 @@ In what follows there is no much by way of answers; the primary aim is just to i
 %Focus is on development and origins of knowledge ... but a side-effect will be that we understand representation, perception and knowledge better.
 
 
+
+\section{Core Knowledge and Perception}
 %source!
 %research/Development as Rediscovery--core knowledge and speech perception.doc
+
+
+\section{Development as rediscovery}
+
+\section{Social Origins of Knowledge}
+
+
+
 
 \section{The puzzle}
 \label{sec:puzzle}
