working on proposal

--- a/developing mind/chapter_01.tex
+++ b/developing mind/chapter_01.tex
@@ -5,8 +5,8 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {The Developing Mind}
-\def \isubtitle {}
+\def \ititle {The Developing Mind: }
+\def \isubtitle {A philosophical introduction to issues in cognitive development}
 \def \iauthor {Stephen A. Butterfill}
 \def \iemail{s.butterfill@warwick.ac.uk}
 %\def \iauthor {}
@@ -67,16 +67,6 @@ Lots of different mechanisms are simultaneously at work and many interact with e
 %While it might initially seem more satisfying to have a unifying myth, 
 To make progress we need to identify various mechanisms and attempt to model their interactions. 
 
-In broad outline, then, understanding the developmental origins of knowledge calls detailed investigation of many interacting but separate phenomena rather than large-scale theory building. 
-This attitude is nicely captured by some psychologists reflecting on difficulties in understanding knowledge of objects:
-%
-\begin{quote}
-`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ the task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
-%. ...\ the challenge ...\ is to characterize what it is about the mental representations of the presence or absence of the barriers that constrains representations of where the object should be in looking-time studies and how these representations differ from those that guide search or pointing in the present studies%
-'
-\citep[p.\ 1522]{Hood:2000bf}.
-\end{quote}
-%
 %obstacle --- half-formed minds
 Performing this task  requires philosophical as well as more narrowly psychological investigation. 
 The question is how humans come to know about objects, words, thoughts and other things. 
@@ -136,6 +126,18 @@ In what follows there is no much by way of answers; the primary aim is just to i
 \section{Core Knowledge and Perception}
 %source!
 %research/Development as Rediscovery--core knowledge and speech perception.doc
+
+
+In broad outline, then, understanding the developmental origins of knowledge calls detailed investigation of many interacting but separate phenomena rather than large-scale theory building. 
+This attitude is nicely captured by some psychologists reflecting on difficulties in understanding knowledge of objects:
+%
+\begin{quote}
+`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ the task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
+%. ...\ the challenge ...\ is to characterize what it is about the mental representations of the presence or absence of the barriers that constrains representations of where the object should be in looking-time studies and how these representations differ from those that guide search or pointing in the present studies%
+'
+\citep[p.\ 1522]{Hood:2000bf}.
+\end{quote}
+%
 
 
 \section{Development as rediscovery}
