working on proposal

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -14,8 +14,12 @@
 \date{}
 
 
-\input{$HOME/Documents/submissions/preamble_steve_paper2}
+\input{$HOME/Documents/submissions/preamble_steve_report}
 %\author{}
+
+%use titlesec package to make subsections bold italics
+\titleformat*{\subsection}{\bfseries\itshape}  
+
 
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
@@ -30,6 +34,9 @@
 
 \maketitle
 %\tableofcontents
+
+% disables chapter, section and subsection numbering
+\setcounter{secnumdepth}{-1} 
 
 %\begin{abstract}
 %\noindent
@@ -52,13 +59,13 @@ The question goes back to Plato or earlier and remains unanswered.
 %More recently it has become the focus of a branch of psychology, developmental psychology.
 %So far no one has convincingly answered the question, but two major breakthroughs have been made in the last three decades or so.
 Two recent scientific breakthroughs appear to bring us closer to an answer, and to show that the question is even less straightforward than philosophers have  assumed.
-The first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social skills, skills which
+The first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social abilities, abilities which
 % begin to be built from the first months of life and 
 may well be foundational for later linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
 A second breakthrough concerns the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
 These expectations or the representations and processes underpinning them arguably also enable the emergence of knowledge. 
 Although each breakthrough has been discussed at length by leading psychologists, philosophers have yet to consider either systematically in print.
-Further, the two breakthroughs are associated with different camps, one nativist and the other Vygotskian, and have rarely been considered together as twin factors enabling the emergence of knowledge.
+Further, the two breakthroughs are associated with different camps, one nativist and the other Vygotskian, and have rarely been considered together as identifying twin factors enabling the emergence of knowledge.
 The proposed book will familiarise readers with findings related to both breakthroughs and explain their relevance to philosophical accounts of knowledge, action and experience.  
 Most importantly, the book aims to introduce readers to  philosophical issues raised by these findings in cognitive development.
 
@@ -129,7 +136,7 @@ It's aims are clearly distinct from any of these volume's aims: the proposed boo
 
 
 \section{Contents}
-(Details are likely to change.)
+(This plan may change.)
 
 
 \subsection{Introduction}
@@ -158,27 +165,112 @@ We have many vocabularies for describing nature when we regard it as mindless, a
 %Even so, Davidson 
 %
 To understand the emergence of knowledge we need to find ways of describing what is in between: individuals whose movements are neither mindless nor guided by intention and knowledge.  
+Some progress has already been made but many challenges remain. 
+Philosophers have much to contribute in crafting distinctions and conceptual tools useful for meeting the challenges involved in describing what is in between. 
+There is also much for philosophers to gain: studying what is in between mindless nature and the sorts of cognition captured by  adult humans' everyday, pre-theoretical mentalistic notions 
+ will reveal things about what minds are and how they work.
 
-***
+As well as explaining how research on developing minds bears on some existing philosophical issues and raises some new ones,
+this chapter introduces two scientific breakthroughs that have recently furthered understanding of how knowledge might emerge in development.
+As already mentioned (in the Brief Description), the first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social abilities, abilities which
+% begin to be built from the first months of life and 
+may well be foundational for later linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
+A second breakthrough concerns the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
+These breakthroughs are driven by researchers with conflicting theoretical positions and raise quite different issues.  
+But they both  identify ingredients necessary for understanding the developmental origins of human knowledge.
 
 
-\subsection{Social Interaction before Knowledge}
-Consider the hypothesis that social interaction is an enabler of cognitive development. 
-This hypothesis immediately raises a question. 
-***
+
+\subsection{Chapter 1. Social Interaction without Words}
+Could social interaction be an enabler of cognitive development? 
+This chapter examines arguments for the hypothesis that it could
+ (as offered in \citealp{Tomasello:2003tq} and \citealp{Moll:2007gu}); it also discusses objections to this hypothesis and introduces questions it raises.
+ 
+An immediate problem is that much adult social interaction depends so heavily on communication by language (not to mention social networks) that it can be hard to imagine what social interaction with preverbal infants could involve.
+Relatedly, many theoretical accounts of social interaction presuppose linguistic abilities.
+To overcome this difficulty we shall review evidence for a package of social abilities manifested in preverbal infants.
+These include imitation, which can occur just days and even minutes after birth \citep{meltzoff:1977_imitation,field:1982_imitation,meltzoff:1983_newborn}, 
+%for a review on imitation, see \citep{jones:2009_development}
+imitative learning, 
+gaze following \citep{Csibra:2008be},
+goal ascription \citep{Gergely:1995sq,Woodward:2000jw},
+social referencing \citep{Baldwin:2000qq} 
+and 
+pointing. 
+Taken together, the evidence reveals that preverbal infants have surprisingly rich social abilities.
+
+The hypothesis that these social abilities enable cognitive development faces an objection. 
+For it seems that many of these abilities already presuppose  knowledge of objects, actions and minds. 
+For instance, twelve-month old infants  will helpfully point to inform ignorant but not knowledgable adults about the location of an object  \citep{Liszkowski:2008al}.
+Some researchers take this to show that these infants are already capable of knowing about others' knowledge and ignorance. 
+If that is right, pointing and other social abilities could play at most a limited role in explaining the developmental origins of knowledge of mind. 
+After all, we can hardly explain the emergence of something by appealing to abilities whose possession already presuppose it.
+We will encounter tools for replying to this objection in Chapters 2 (on Objects) and 6 (on Actions).
+
+The hypothesis that social abilities enable cognitive development naturally invites a question: How could that work? 
+Some have argued that early social abilities partially explain the emergence in humans of communication by language (\citealp{tomasello:2008origins}; see Chapter 5 on Words). 
+This is a valuable contribution.  
+But could social abilities also play a role in explaining the developmental origins of knowledge of things other than words---for example, in explaining the emergence of knowledge of objects, numbers, colours or minds? 
+This question comes up in one way or another in each of the following chapters.
 
 
-\subsection{Objects and How They Interact}
+\subsection{Chapter 2. Objects and How They Interact}
+\label{ch:objects}
+When can infants first know things about objects they aren't perceiving?   
+For instance, when a ball falling behind a chair disappears from view, when do infants first realise that the ball is somewhere behind the chair?
+The ability to realise this is known as `object permanence'.  
+One way to test for object permanence is to ask when infants first reach for objects they can’t see or when they first remove barriers to retrieve objects concealed behind them.  
+Infants don’t do this until around eight months \citep[p.\ 202]{Meltzoff:1998wp} or maybe later \citep{moore:2008_factors}.  
+Since four-month-olds already have the planning skills they would need to execute the reach \citep{Shinskey:2001fk}, 
+their failure to reach is evidence that infants can first think about objects they aren’t perceiving at around eight months or later.  
+But another way to test for object permanence is to ask how infants respond to apparently impossible events. 
+Suppose, for example, that infants watch as a solid object is placed immediately behind a screen and then the screen falls backwards, ending up flat as though the object were not there, which is apparently impossible \citep{baillargeon:1985_object,baillargeon:1987_object}. 
+If infants show heightened interest in this and similar cases, perhaps by looking at the display for longer than might otherwise be expected, this would be evidence that they can know things about objects they aren't perceiving.
+%\footnote{
+%These particular studies have been attacked on methodological grounds \citep[e.g.][]{sirois:2007_social_}, but there are other, related studies \citep[some are mentioned by][]{Aguiar:2002ob}.
+%}
+ As it turns out, infants show such heightened interest from around four months or earlier. 
+Put together, the two sorts of findings give rise to the `paradox of early permanence' (as \citealp{Meltzoff:1998wp} call it). 
+The best explanation of the first sort of findings seems to be that infants cannot think about objects they aren't perceiving until eight months or later; 
+but the best explanation of the second sort of findings seems to be that infants can do this from around four months or earlier. 
+Clearly these explanations cannot both be correct. 
+But neither seems to be wrong. 
 
-\subsection{Number: From Perceptual Experience to Knowledge}
+This conflict exemplifies a pattern that occurs again and again in investigating the developmental origins of knowledge. 
+Here's the pattern.
+We ask when humans can first know about X. 
+One set of findings provides converging evidence that the answer is: surprisingly early.
+Another set of findings, using a different set of techniques,  provides converging evidence that the answer is: much later. 
+Unless they arise from methodological failings, these conflicting answers force us to recognise that the question involves a mistake. 
+The mistake is to think that there is a single kind of knowledge. 
+%As some psychologists reflecting on difficulties in understanding knowledge of objects suggest, 
+The pattern of conflict shows that we must recognise:
+%
+\begin{quote}
+`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ the task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
+%. ...\ the challenge ...\ is to characterize what it is about the mental representations of the presence or absence of the barriers that constrains representations of where the object should be in looking-time studies and how these representations differ from those that guide search or pointing in the present studies%
+'
+\citep[p.\ 1522]{Hood:2000bf}.
+\end{quote}
+%
+It is one thing to propose that there are multiple kinds of knowledge and quite another to make systematic sense of this possibility.
+In this chapter we will consider attempts to do this by appeal to notions of modularity \citep{Fodor:1983dg}
+and core knowledge \citep{Spelke:2007hb}. 
+Both attempts raise further questions.  
+These questions about how to make sense of the possibility that there are multiple kinds of knowledge 
+run through the following chapters. 
 
-\subsection{Seeing and Talking about Colours}
 
-\subsection{Words Are Tools for Communication}
+\subsection{Chapter 3. Number: From Perceptual Experience to Knowledge}
 
-\subsection{Actions: Teleology and Mirroring Motor Awareness}
+\subsection{Chapter 4. Seeing and Talking about Colours}
 
-\subsection{Mindreading}
+\subsection{Chapter 5. Words Are Tools for Communication}
+
+\subsection{Chapter 6. Actions: Teleology and Mirroring Motor Awareness}
+\label{ch:actions}
+
+\subsection{Chapter 7. Mindreading}
 
 \subsection{Conclusion}
 
