changes to minimal theor yof mind requested after accept --- include papa on Jonathan Bennett acknolwedge

--- a/joint action and knowing others minds/interacting mindreaders.3.ps.corrections.tex
+++ b/joint action and knowing others minds/interacting mindreaders.3.ps.corrections.tex
@@ -1,8 +1,8 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-%\def \papersize {a4paper}
-\def \papersize {letterpaper}
+\def \papersize {a4paper}
+%\def \papersize {letterpaper}
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
@@ -658,7 +658,7 @@ Note that our actions could have a distributive goal even without us each intend
 As another variation on the turnip-pulling story,
 suppose that we each individually intend to 
 	contribute to pulling up the turnip or pull it up.
-Such intentions are agent neutral in this sense:
+Such intentions are agent-neutral in this sense:
 relative to such an intention an agent 
 	could succeed by acting alone 
 and
@@ -871,7 +871,7 @@ We are grateful to anonymous referee for emphasising this point.
 }
 Note, however, that it is only reasonable for the other to attempt a joint action with you where you are in a position to know which goal the joint action would be directed to. 
 If no alternative goal ought to be salient to you and the other has done nothing to make an alternative salient, then it is not unreasonable for you to ignore the possibility that the other is unwilling to pursue the goal to which your actions will be directed. 
-This might easily be the case where, for instance, you are in a tidy kitchen patiently chopping your way through a large pile of carrots; it is perhaps less likely to be the case in a more cluttered kitchen where you are surrounded by all kinds of potential ingredient in different states of preparation. 
+This might easily be the case where, for instance, you are in a tidy kitchen patiently chopping your way through a large pile of carrots; it is perhaps less likely to be the case in a more cluttered kitchen where you are surrounded by all kinds of potential ingredients in different states of preparation. 
 In general, how strongly the truth of the premises of the your-goal-is-my-goal inference supports the truth of the conclusion will depend (among other conditions) on how salient alternative goals to which your actions might be directed ought to be to you.
 
 Given these and perhaps other background conditions,
@@ -977,7 +977,7 @@ depends on this,
 that our willingness to act jointly with her is based on \emph{our} knowledge of the goals of \emph{her} actions.
 In purely observational mindreading, the target's beliefs about the goals of the mindreader's actions are not normally relevant (except, of course, when the mindreader is ascribing such beliefs).
 But interacting mindreaders who rely on your-goal-is-my-goal
-thereby rely on their targets' having correctly identified the goals of their actions.
+thereby rely on their targets having correctly identified the goals of their actions.
 Of course this is sometimes a reason not to rely on your-goal-is-my-goal.
 But where the target understands relevant means-ends relations,
 such as actions involving novel tools,
@@ -1200,7 +1200,7 @@ Therefore:
 \end{enumerate}
 %
 Call this inference \emph{her-goal-is-his-goal}.  
-This inference shows that mere observers who understand interaction also have a route to knowledge of other's goals that avoids the problem of opaque means. 
+This inference shows that mere observers who understand interaction also have a route to knowledge of others' goals that avoids the problem of opaque means. 
 The significance of interaction for mindreading extends beyond cases in which the mindreader herself interacts.
 
 Is this an objection to our claim that an interacting mindreader could be in a position to know things  she would be unable to know were she a mere observer?
