--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -301,7 +301,7 @@ but importantly there are also false belief tasks success on which success could
 
 	We aim to provide the core elements of a computational theory in Marr’s sense (\citeyear[][pp.\ 15-29]{en_917}) where our computational theory, unlike the standard full-blown theory of mind which hinges on beliefs, desires and other propositional attitudes, is one that could be realised in a cognitively efficient manner without requiring conceptual sophistication.\footnote{ 	Computational theories in Marr’s sense are not necessarily  implemented by computational processes.}  There are multiple ways in which this computational theory might be implemented.  We shall not discuss how the theory might be implemented here other than to note that it seems unlikely that the principles formulated below are represented explicitly.  It is valuable to articulate the computational theory in some detail before formulating and testing conjectures about implementation.  
 
-
+Our approach is inspired by a tradition of creature construction in philosophy, and in particular by Bennett’s construction in \textit{Linguistic Behaviour} (\citeyear{Bennett:1976rg}).  Of course, where Bennett and others aimed to understand something about what it is for a subject to have desires, beliefs and other mental states, our main aim is to understand what might be involved in tracking and thinking about these things.
 
 \subsection{First principle}
 
